<resources>
    <string name="app_name">संगोष्ठि</string>
    <string name="view_content">विषय सूची</string>
    <string name="record_query">सवाल\nजमा करें</string>
    <!--<string name="dropbox_path">/Android/data/com.dropbox.android/files/u704278258/scratch/Grit Lab Team Folder/sangoshthi_gallery/</string>-->
    <!--<string name="dropbox_access_path">/Android/data/com.dropbox.android/files/u704278258/scratch/Grit Lab Team Folder/sangoshthi_gallery/logs/access.txt/</string>-->
    <!--<string name="dropbox_logs_path">/Android/data/com.dropbox.android/files/u704278258/scratch/Grit Lab Team Folder/sangoshthi_gallery/logs/log_</string>-->
    <!--<string name="dropbox_logcat_path">/Android/data/com.dropbox.android/files/u704278258/scratch/Grit Lab Team Folder/sangoshthi_gallery/logs/logcat_</string>-->
    <!--<string name="dropbox_recording_path">/Android/data/com.dropbox.android/files/u704278258/scratch/Grit Lab Team Folder/sangoshthi_gallery/logs/rec_</string>-->
    <!--<string name="dropbox_icons_path">/Android/data/com.dropbox.android/files/u704278258/scratch/Grit Lab Team Folder/sangoshthi_gallery/logs/</string>-->

    <string name="dropbox_path">/Android/DropsyncFiles/</string>
    <string name="dropbox_access_path">/Android/DropsyncFiles/logs/access.txt/</string>
    <string name="dropbox_logs_path">/Android/DropsyncFiles/logs/log_</string>
    <string name="dropbox_logcat_path">//Android/DropsyncFiles/logs/logcat_</string>
    <string name="dropbox_recording_path">/Android/DropsyncFiles/logs/rec_</string>
    <string name="dropbox_icons_path">/Android/DropsyncFiles/logs/</string>


    <string name="register_minLen_name">1</string>
    <string name="register_len_phoneNum">10</string>

    <string name="enter_name">अपना नाम डालें</string>
    <string name="user_registration">आशा रजिस्ट्रेशन</string>
    <string name="enter_phoneno">अपना फ़ोन नंबर डालें</string>
    <string name="toast_wrong_name">अपना नाम डालें</string>
    <string name="toast_wrong_phoneNum">अपना फ़ोन नंबर डालें</string>
    <string name="toast_unauth_phoneNum">फ़ोन नंबर रजिस्टर नहीं हैं</string>
    <string name="toast_access_file">Check Dropbox Access File</string>

    <string name="splash_screen">संगोष्ठि: विद्यावाली</string>
    <string name="topics_gallery_home_title">Sangoshthi Gallery</string>
    <string name="topics_actvity_title">Media List</string>
    <string name="placeholder_tv_file_name">file_name.mp4</string>
    <string name="topics_actvity_item_title">Media Name</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>

    <string name="label_slide_to_cancel">Slide to cancel</string>
    <string name="hint_type_your_message">Slide to record query</string>


    <string name="record_timer">0:0</string>
    <string name="record_startrecording">रिकॉर्डिंग शुरू करें</string>
    <string name="record_endrecording">रिकॉर्डिंग ख़त्म करें</string>

    <string name="record_play_recording">रिकॉर्डिंग चलाएँ</string>
    <string name="record_pause_recording">रिकॉर्डिंग रोके</string>

    <string name="record_discard_recording">हटायें</string>

    <string name="record_submit">जमा करें</string>

</resources>
